ideaNom/src/main/gen/com/nom/ideanom/NomParser.java
// This is a generated file. Not intended for manual editing.
package com.nom.ideanom;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.nom.ideanom.NomTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class NomParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return nomFile(b, l + 1);
  }

  /* ********************************************************** */
  // PLUS | MINUS
  public static boolean addsubop(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "addsubop")) return false;
    if (!nextTokenIs(b, "<addsubop>", MINUS, PLUS)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDSUBOP, "<addsubop>");
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // dtype ident
  // | ident
  public static boolean argdecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argdecl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGDECL, "<argdecl>");
    r = argdecl_0(b, l + 1);
    if (!r) r = ident(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // dtype ident
  private static boolean argdecl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argdecl_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = dtype(b, l + 1);
    r = r && ident(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LBRACE (stmt)* RBRACE
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && block_1(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, BLOCK, r);
    return r;
  }

  // (stmt)*
  private static boolean block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!block_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_1", c)) break;
    }
    return true;
  }

  // (stmt)
  private static boolean block_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = stmt(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (FINAL | visibility | ABSTRACT | PARTIAL | MATERIAL | SHAPE)* CLASS ID (EXTENDS inheritancedecl)? (IMPLEMENTS inheritancedecl (COMMA inheritancedecl)*)? LBRACE (methdef | fielddecl | constructor | staticmethdef | staticfielddecl | classdef | interfacedef | instancedecl)* RBRACE
  public static boolean classdef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classdef")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLASSDEF, "<classdef>");
    r = classdef_0(b, l + 1);
    r = r && consumeTokens(b, 0, CLASS, ID);
    r = r && classdef_3(b, l + 1);
    r = r && classdef_4(b, l + 1);
    r = r && consumeToken(b, LBRACE);
    r = r && classdef_6(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (FINAL | visibility | ABSTRACT | PARTIAL | MATERIAL | SHAPE)*
  private static boolean classdef_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classdef_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!classdef_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "classdef_0", c)) break;
    }
    return true;
  }

  // FINAL | visibility | ABSTRACT | PARTIAL | MATERIAL | SHAPE
  private static boolean classdef_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classdef_0_0")) return false;
    boolean r;
    r = consumeToken(b, FINAL);
    if (!r) r = visibility(b, l + 1);
    if (!r) r = consumeToken(b, ABSTRACT);
    if (!r) r = consumeToken(b, PARTIAL);
    if (!r) r = consumeToken(b, MATERIAL);
    if (!r) r = consumeToken(b, SHAPE);
    return r;
  }

  // (EXTENDS inheritancedecl)?
  private static boolean classdef_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classdef_3")) return false;
    classdef_3_0(b, l + 1);
    return true;
  }

  // EXTENDS inheritancedecl
  private static boolean classdef_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classdef_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXTENDS);
    r = r && inheritancedecl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (IMPLEMENTS inheritancedecl (COMMA inheritancedecl)*)?
  private static boolean classdef_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classdef_4")) return false;
    classdef_4_0(b, l + 1);
    return true;
  }

  // IMPLEMENTS inheritancedecl (COMMA inheritancedecl)*
  private static boolean classdef_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classdef_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IMPLEMENTS);
    r = r && inheritancedecl(b, l + 1);
    r = r && classdef_4_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA inheritancedecl)*
  private static boolean classdef_4_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classdef_4_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!classdef_4_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "classdef_4_0_2", c)) break;
    }
    return true;
  }

  // COMMA inheritancedecl
  private static boolean classdef_4_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classdef_4_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && inheritancedecl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (methdef | fielddecl | constructor | staticmethdef | staticfielddecl | classdef | interfacedef | instancedecl)*
  private static boolean classdef_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classdef_6")) return false;
    while (true) {
      int c = current_position_(b);
      if (!classdef_6_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "classdef_6", c)) break;
    }
    return true;
  }

  // methdef | fielddecl | constructor | staticmethdef | staticfielddecl | classdef | interfacedef | instancedecl
  private static boolean classdef_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "classdef_6_0")) return false;
    boolean r;
    r = methdef(b, l + 1);
    if (!r) r = fielddecl(b, l + 1);
    if (!r) r = constructor(b, l + 1);
    if (!r) r = staticmethdef(b, l + 1);
    if (!r) r = staticfielddecl(b, l + 1);
    if (!r) r = classdef(b, l + 1);
    if (!r) r = interfacedef(b, l + 1);
    if (!r) r = instancedecl(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // (visibility)? CONSTRUCT LPAREN (argdecl (COMMA argdecl)*)? RPAREN LBRACE stmt* (SUPER LPAREN (expr (COMMA expr)*)? RPAREN SEMICOLON stmt*)? RBRACE
  public static boolean constructor(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTRUCTOR, "<constructor>");
    r = constructor_0(b, l + 1);
    r = r && consumeTokens(b, 0, CONSTRUCT, LPAREN);
    r = r && constructor_3(b, l + 1);
    r = r && consumeTokens(b, 0, RPAREN, LBRACE);
    r = r && constructor_6(b, l + 1);
    r = r && constructor_7(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (visibility)?
  private static boolean constructor_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_0")) return false;
    constructor_0_0(b, l + 1);
    return true;
  }

  // (visibility)
  private static boolean constructor_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = visibility(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (argdecl (COMMA argdecl)*)?
  private static boolean constructor_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_3")) return false;
    constructor_3_0(b, l + 1);
    return true;
  }

  // argdecl (COMMA argdecl)*
  private static boolean constructor_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = argdecl(b, l + 1);
    r = r && constructor_3_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA argdecl)*
  private static boolean constructor_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_3_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!constructor_3_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "constructor_3_0_1", c)) break;
    }
    return true;
  }

  // COMMA argdecl
  private static boolean constructor_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_3_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && argdecl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // stmt*
  private static boolean constructor_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_6")) return false;
    while (true) {
      int c = current_position_(b);
      if (!stmt(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "constructor_6", c)) break;
    }
    return true;
  }

  // (SUPER LPAREN (expr (COMMA expr)*)? RPAREN SEMICOLON stmt*)?
  private static boolean constructor_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_7")) return false;
    constructor_7_0(b, l + 1);
    return true;
  }

  // SUPER LPAREN (expr (COMMA expr)*)? RPAREN SEMICOLON stmt*
  private static boolean constructor_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_7_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, SUPER, LPAREN);
    r = r && constructor_7_0_2(b, l + 1);
    r = r && consumeTokens(b, 0, RPAREN, SEMICOLON);
    r = r && constructor_7_0_5(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (expr (COMMA expr)*)?
  private static boolean constructor_7_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_7_0_2")) return false;
    constructor_7_0_2_0(b, l + 1);
    return true;
  }

  // expr (COMMA expr)*
  private static boolean constructor_7_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_7_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr(b, l + 1);
    r = r && constructor_7_0_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA expr)*
  private static boolean constructor_7_0_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_7_0_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!constructor_7_0_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "constructor_7_0_2_0_1", c)) break;
    }
    return true;
  }

  // COMMA expr
  private static boolean constructor_7_0_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_7_0_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // stmt*
  private static boolean constructor_7_0_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_7_0_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!stmt(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "constructor_7_0_5", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // typeqname
  public static boolean ctype(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype")) return false;
    if (!nextTokenIs(b, "<ctype>", COLONCOLON, ID)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CTYPE, "<ctype>");
    r = typeqname(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // typeqname2
  public static boolean ctype2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ctype2")) return false;
    if (!nextTokenIs(b, "<ctype 2>", COLONCOLON, ID)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CTYPE_2, "<ctype 2>");
    r = typeqname2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ident (LANGLE (typeargspec (COMMA typeargspec)*)? RANGLE)?
  public static boolean declident(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declident")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ident(b, l + 1);
    r = r && declident_1(b, l + 1);
    exit_section_(b, m, DECLIDENT, r);
    return r;
  }

  // (LANGLE (typeargspec (COMMA typeargspec)*)? RANGLE)?
  private static boolean declident_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declident_1")) return false;
    declident_1_0(b, l + 1);
    return true;
  }

  // LANGLE (typeargspec (COMMA typeargspec)*)? RANGLE
  private static boolean declident_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declident_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LANGLE);
    r = r && declident_1_0_1(b, l + 1);
    r = r && consumeToken(b, RANGLE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (typeargspec (COMMA typeargspec)*)?
  private static boolean declident_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declident_1_0_1")) return false;
    declident_1_0_1_0(b, l + 1);
    return true;
  }

  // typeargspec (COMMA typeargspec)*
  private static boolean declident_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declident_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = typeargspec(b, l + 1);
    r = r && declident_1_0_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA typeargspec)*
  private static boolean declident_1_0_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declident_1_0_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!declident_1_0_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "declident_1_0_1_0_1", c)) break;
    }
    return true;
  }

  // COMMA typeargspec
  private static boolean declident_1_0_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declident_1_0_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && typeargspec(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (declident DOT)* declident
  public static boolean declqname(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declqname")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = declqname_0(b, l + 1);
    r = r && declident(b, l + 1);
    exit_section_(b, m, DECLQNAME, r);
    return r;
  }

  // (declident DOT)*
  private static boolean declqname_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declqname_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!declqname_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "declqname_0", c)) break;
    }
    return true;
  }

  // declident DOT
  private static boolean declqname_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declqname_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = declident(b, l + 1);
    r = r && consumeToken(b, DOT);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // STRING | INT | MINUS INT | FLOAT | TRUE | FALSE
  // | NUL | ctype COLONCOLON ident (LBRACKET (defaultexpr (COMMA defaultexpr)*)? RBRACKET)?
  // | LBRACKET (defaultexpr (COMMA defaultexpr)*)? RBRACKET
  // | ident
  public static boolean defaultexpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defaultexpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFAULTEXPR, "<defaultexpr>");
    r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, INT);
    if (!r) r = parseTokens(b, 0, MINUS, INT);
    if (!r) r = consumeToken(b, FLOAT);
    if (!r) r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    if (!r) r = consumeToken(b, NUL);
    if (!r) r = defaultexpr_7(b, l + 1);
    if (!r) r = defaultexpr_8(b, l + 1);
    if (!r) r = ident(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ctype COLONCOLON ident (LBRACKET (defaultexpr (COMMA defaultexpr)*)? RBRACKET)?
  private static boolean defaultexpr_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defaultexpr_7")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ctype(b, l + 1);
    r = r && consumeToken(b, COLONCOLON);
    r = r && ident(b, l + 1);
    r = r && defaultexpr_7_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (LBRACKET (defaultexpr (COMMA defaultexpr)*)? RBRACKET)?
  private static boolean defaultexpr_7_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defaultexpr_7_3")) return false;
    defaultexpr_7_3_0(b, l + 1);
    return true;
  }

  // LBRACKET (defaultexpr (COMMA defaultexpr)*)? RBRACKET
  private static boolean defaultexpr_7_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defaultexpr_7_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && defaultexpr_7_3_0_1(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // (defaultexpr (COMMA defaultexpr)*)?
  private static boolean defaultexpr_7_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defaultexpr_7_3_0_1")) return false;
    defaultexpr_7_3_0_1_0(b, l + 1);
    return true;
  }

  // defaultexpr (COMMA defaultexpr)*
  private static boolean defaultexpr_7_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defaultexpr_7_3_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = defaultexpr(b, l + 1);
    r = r && defaultexpr_7_3_0_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
